--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,16 @@ button {
   margin: 0 5px;
   border: 1px solid black;
   border-radius: 5px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 button:hover {
  background-color: #969696;
   border-radius: 5px;
+}
+
+button:active {
+ transform: scale(0.9);
 }
 
 label {
